Version 2.2.17 - NO NAME SET
-------------------------------
Core - General
 - BR #12529 - Cacheable Pages have Bad Header Last-Modified.
 - BR #12543 - Lib file corrections.
 - Compatibility fixes for PHP 8.0 (and 8.1).
 - Smarty upgraded to version 3.1.44.

Content Manager v
 - Differentiate new page from cloned page.

Design Manager v
 - BR #12545 - Module: DesignManager typo info on top file.

FilePicker v
 - BR #12539 - Module FilePicker 1.0.5 files corrections.

Module Manager v
 - BR #12541 - Module ModuleManager 2.1.8 : corrections + compatible php 7.1.0 to 8.1.4.

News v
 - BR #12543 - Lib file corrections.


Version 2.2.16 - Truro
-------------------------------
Core - General
  - BR #12370 - Admin Log-Download : now downloading the log honors all filters but doesn't process paging.
  - BR #12437 - Installer won't allow "<" symbol in database password.
  - BR #12457 - Event Manager empty list when mysql mode only_full_group_by.
  - BR #12484 - Cannot exit after Run UDT.
  - BR #12495 - MySQL 8.0.2+ breaks groups without table prefix.
  - BR #12499 - adminlog.tpl Wrongly formed date.
  - BR #12500 - NameQuote function does not work properly.
  - BR #12504 - Function call notification.
  - Fixed an issue with specific characters in a content block tab name breaking the editor.
  - Adjust regex's incompatible with PCRE2.
  - Avoid deprecated strftime() - deploy new replacement function locale_ftime() and new modifier-plugin localedate_format.
  - A number of fixes for PHP 8 compatibility.

Admin Search v1.0.6
  - BR #12443 - Admin Search fails on some searches with default mysql mode only_full_group_by (mysql 5.7.5+).
  - Removed license and copyright notices from module help text.
  - Escaping the search input field values.
  - More content object attributes are searched.
  - User Defined Tags can be searched.
  - Only places a user has permission to search are shown in the filter list (cached!).

Content Manager v1.1.9
  - Fix menu text/title setting.
